<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/WEATHER_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center_vertical"
        android:text="@string/tvWeather"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:textColor="#FF5A5A5A"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/trTEMPicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="spread" />

    <TableRow
        android:id="@+id/trTEMPicon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/trWeatherCondition"
        app:layout_constraintTop_toBottomOf="@id/tvCityName">

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#FF5A5A5A"
            android:textSize="120sp" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="40dp"
            app:srcCompat="?attr/listChoiceBackgroundIndicator" />
    </TableRow>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="906dp"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/trWind"
        app:srcCompat="@drawable/rectangle_37" />

    <TableRow
        android:id="@+id/trWeatherCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/trHighLow">

        <TextView
            android:id="@+id/tvWeatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="right|center_vertical"
            android:textColor="#FF5A5A5A"
            android:textSize="45sp" />

    </TableRow>

    <TableRow
        android:id="@+id/trHighLow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/trFeelsLike"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvHIGH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/tvHIGH"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvHIGHtemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tvDegrees"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/tvLOW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/tvLOW"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvLowtemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="right|center_vertical"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tvDegrees"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </TableRow>

    <TableRow
        android:id="@+id/trFeelsLike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/trHumidity">

        <TextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/tvFeelsLike"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvFeelsLikeTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="right|center_vertical"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tvDegrees"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </TableRow>

    <TableRow
        android:id="@+id/trHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/trWind"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/tvHumidity"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvHumidityPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="right|center_vertical"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="sans-serif-light"
            android:text="%"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </TableRow>

    <TableRow
        android:id="@+id/trWind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/tvWind"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="right|center_vertical"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvMPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="sans-serif-light"
            android:text="mph"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>