...
    <string name="tvChangePicture">Change Profile Picture</string>
    <string name="tvEditProfile">EDIT PROFILE</string>
    <string name="etZip">Country</string>
    <string name="tvZip">ZIP Code</string>
    <string name="buttonChangePicture">Change Profile Picture</string>
    <string name="tvAge">Age</string>
    <string name="buttonSaveProfile">Save</string>
    <string name="buttonCreateNewUser">New User</string>
    <string name="buttonContinue">Continue</string>
    <string name="tvWelcomeUser">WELCOME,</string>
    <string name="tvBMICalculator">BMI CALCULATOR</string>
    <string name="tvBMIValue">19.5</string>
    <string name="tvBMIAge">Age:</string>
    <string name="tvBMIAgeValue">30</string>
...
    <string name="tvBMIWeightValue">115</string>
    <string name="tvPounds">lbs</string>
    <string name="tvKilograms">kg</string>
    <string name="tvInches">in</string>
    <string name="tvMeters">m</string>
    <string name="tvColon">:</string>
    <string name="tvWeather">WEATHER</string>
    <string name="tvFitnessGoals">FITNESS GOALS</string>
    <string name="tvFindAHike">FIND A HIKE</string>
    <string name="tvDegrees">°</string>
    <string name="tvHIGH">High:</string>
    <string name="tvLOW">Low:</string>
    <string name="tvFeelsLike">Feels Like:</string>
    <string name="tvHumidity">Humidity:</string>
    <string name="tvWind">Wind:</string>
    <string name="tvStepCounter">STEP COUNTER</string>
</resources>
