...
        android:id="@+id/rectangle_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_3"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

...
                android:scaleType="centerInside"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/calculator" />

            <ImageButton
                android:id="@+id/ibWeather"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:backgroundTint="#00FFFFFF"
...
